--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
   <h3>Skills</h3>
       <table cellspacing="10px">
           <tr>
-            <td>Web Developer</td>
+            <td>Web Developer : </td>
             <td>HTML | CSS  | Javascript | vscode</td>
           </tr>
           <tr>
-            <td>Other Skills</td>
+            <td>Other Skills : </td>
             <td>Effective Communication</td>
           </tr>
       </table>
