--- a/index.html
+++ b/index.html
@@ -91,15 +91,15 @@
   <table cellspacing="10px">
     <tr>
       <td>Personal Portfolio </td>
-      <td><a href="https://abdurrahman2004.github.io/personal-portfolio/ " target="_blank">Click Here &#128540;</a></td>
+      <td><a href="https://abdurrahman2004.github.io/personal-portfolio/ " target="_blank">Click Here </a></td>
     </tr>
     <tr>
       <td>Dice Game</td>
-      <td><a href=" https://abdurrahman2004.github.io/dice-game/" target="_blank" >Click Here &#128540;</a></td>
+      <td><a href=" https://abdurrahman2004.github.io/dice-game/" target="_blank" >Click Here </a></td>
     </tr>
     <tr>
         <td>Drums</td>
-        <td><a href="https://abdurrahman2004.github.io/play-drums/" target="_blank" >Click Here &#128540;</a></td>
+        <td><a href="https://abdurrahman2004.github.io/play-drums/" target="_blank" >Click Here </a></td>
       </tr>
 </table>
 <hr>
